* Added create-table functionality to SaveCommand
* Cleaned up Session; #find no longer supported, use #all or #first
* Moved object materialization into LoadCommand
* Migrated Sqlite3Adapter::Commands
* Added Session#query support back in
* Removed Connection/Reader/Result classes
* Set DataMapper::Base#key on load to avoid double-hit against Schema
* Added DataMapper::Support::Struct for increased Session#query performance
* Added AdvancedHasManyAssociation (preview status)
* Added benchmarks comparing ActiveRecord::Base::find_by_sql with Session#query

-- 0.2.0
* AdvancedHasManyAssociation now functional for fetches
* AdvancedHasManyAssociation renamed to HasNAssociation
* HasManyAssociation refactored to use HasNAssociation superclass
* Slight spec tweaks to accomodate the updates
* HasOneAssociation refactored to use HasNAssociation superclass
* Added HasAndBelongsToManyAssociation, using HasNAssociation as a basis; Need to add corresponding SQL generation code in AdvancedLoadCommand
* Added spec for habtm query generation
* HasNAssociation#foreign_key returns a DataMapper::Adapters::Sql::Mappings::Column instance instead of a raw String now
* Added table, association, association_table and to_sql methods to HasNAssociation
* Added associations_spec.rb
* Added a forced table-recreation to spec_helper.rb so the tests could run with a clean version of the database, including any new columns added to the models
* Added HasAndBelongsToManyAssociation#to_sql (all current specs pass now!)
* Minor tweaks to Callbacks
* Added CallbacksHelper to declare class-method ::callbacks on DataMapper::Base
* Implemented before_validate and after_validate hooks in ValidationHelper
* Minor documentation additions in callbacks.rb
* Added callbacks_spec
* Moved class-method declarations for built-in callbacks to the callbacks helper instead of DataMapper::Base
* Renambed :before/after_validate callback to :before/after_validation to match ActiveRecord